--- a/experiments/cartpole_vpg_hyperparam_opt_001/plots.ipynb
+++ b/experiments/cartpole_vpg_hyperparam_opt_001/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def assign_quality(return_traces):\n",
-    "    return np.mean(np.concatenate([r[-50:] for r in return_traces ]))"
+    "    return np.mean(np.concatenate([r[-1:] for r in return_traces ]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -123,42 +123,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lr 0.001, discount 0.5, batch size 1 has score 175.356\n",
-      "lr 0.001, discount 0.5, batch size 5 has score 38.09840008544922\n",
-      "lr 0.001, discount 0.5, batch size 10 has score 24.412400077819825\n",
-      "lr 0.001, discount 0.5, batch size 20 has score 23.159199966430663\n",
-      "lr 0.001, discount 0.9, batch size 1 has score 158.02\n",
-      "lr 0.001, discount 0.9, batch size 5 has score 37.27600002670288\n",
-      "lr 0.001, discount 0.9, batch size 10 has score 25.706000015258788\n",
-      "lr 0.001, discount 0.9, batch size 20 has score 23.698000045776368\n",
-      "lr 0.001, discount 1.0, batch size 1 has score 184.424\n",
-      "lr 0.001, discount 1.0, batch size 5 has score 40.57200002288818\n",
-      "lr 0.001, discount 1.0, batch size 10 has score 27.69600004196167\n",
-      "lr 0.001, discount 1.0, batch size 20 has score 23.704000038146972\n",
-      "lr 0.010, discount 0.5, batch size 1 has score 57.976\n",
-      "lr 0.010, discount 0.5, batch size 5 has score 150.46560010528563\n",
-      "lr 0.010, discount 0.5, batch size 10 has score 99.60759986877441\n",
-      "lr 0.010, discount 0.5, batch size 20 has score 66.90999995422364\n",
-      "lr 0.010, discount 0.9, batch size 1 has score 38.04\n",
-      "lr 0.010, discount 0.9, batch size 5 has score 120.25679999923706\n",
-      "lr 0.010, discount 0.9, batch size 10 has score 100.66360003662109\n",
-      "lr 0.010, discount 0.9, batch size 20 has score 62.5143999786377\n",
-      "lr 0.010, discount 1.0, batch size 1 has score 79.96\n",
-      "lr 0.010, discount 1.0, batch size 5 has score 158.72879983520508\n",
-      "lr 0.010, discount 1.0, batch size 10 has score 88.4747999420166\n",
-      "lr 0.010, discount 1.0, batch size 20 has score 61.97000022888184\n",
-      "lr 0.100, discount 0.5, batch size 1 has score 9.392\n",
-      "lr 0.100, discount 0.5, batch size 5 has score 24.7199999961853\n",
-      "lr 0.100, discount 0.5, batch size 10 has score 27.30040005493164\n",
-      "lr 0.100, discount 0.5, batch size 20 has score 41.249599876403806\n",
-      "lr 0.100, discount 0.9, batch size 1 has score 9.312\n",
-      "lr 0.100, discount 0.9, batch size 5 has score 12.771199958801269\n",
-      "lr 0.100, discount 0.9, batch size 10 has score 22.066000022888183\n",
-      "lr 0.100, discount 0.9, batch size 20 has score 47.84919995880127\n",
-      "lr 0.100, discount 1.0, batch size 1 has score 20.412\n",
-      "lr 0.100, discount 1.0, batch size 5 has score 9.348799983978271\n",
-      "lr 0.100, discount 1.0, batch size 10 has score 18.63200001144409\n",
-      "lr 0.100, discount 1.0, batch size 20 has score 42.46119968414307\n"
+      "lr 0.001, discount 0.5, batch size 1 has score 161.0\n",
+      "lr 0.001, discount 0.5, batch size 5 has score 47.84000015258789\n",
+      "lr 0.001, discount 0.5, batch size 10 has score 29.620000076293945\n",
+      "lr 0.001, discount 0.5, batch size 20 has score 23.34000015258789\n",
+      "lr 0.001, discount 0.9, batch size 1 has score 163.2\n",
+      "lr 0.001, discount 0.9, batch size 5 has score 50.75999908447265\n",
+      "lr 0.001, discount 0.9, batch size 10 has score 30.1200008392334\n",
+      "lr 0.001, discount 0.9, batch size 20 has score 27.029999923706054\n",
+      "lr 0.001, discount 1.0, batch size 1 has score 177.4\n",
+      "lr 0.001, discount 1.0, batch size 5 has score 49.880000305175784\n",
+      "lr 0.001, discount 1.0, batch size 10 has score 31.24000015258789\n",
+      "lr 0.001, discount 1.0, batch size 20 has score 25.75\n",
+      "lr 0.010, discount 0.5, batch size 1 has score 47.2\n",
+      "lr 0.010, discount 0.5, batch size 5 has score 129.52000007629394\n",
+      "lr 0.010, discount 0.5, batch size 10 has score 162.66000213623047\n",
+      "lr 0.010, discount 0.5, batch size 20 has score 147.9200012207031\n",
+      "lr 0.010, discount 0.9, batch size 1 has score 20.4\n",
+      "lr 0.010, discount 0.9, batch size 5 has score 120.36000213623046\n",
+      "lr 0.010, discount 0.9, batch size 10 has score 157.38000030517577\n",
+      "lr 0.010, discount 0.9, batch size 20 has score 128.27000122070314\n",
+      "lr 0.010, discount 1.0, batch size 1 has score 86.4\n",
+      "lr 0.010, discount 1.0, batch size 5 has score 154.64000091552734\n",
+      "lr 0.010, discount 1.0, batch size 10 has score 164.11999969482423\n",
+      "lr 0.010, discount 1.0, batch size 20 has score 136.6500015258789\n",
+      "lr 0.100, discount 0.5, batch size 1 has score 9.4\n",
+      "lr 0.100, discount 0.5, batch size 5 has score 25.160000228881835\n",
+      "lr 0.100, discount 0.5, batch size 10 has score 16.539999961853027\n",
+      "lr 0.100, discount 0.5, batch size 20 has score 25.509999656677245\n",
+      "lr 0.100, discount 0.9, batch size 1 has score 9.4\n",
+      "lr 0.100, discount 0.9, batch size 5 has score 12.879999923706055\n",
+      "lr 0.100, discount 0.9, batch size 10 has score 10.84000015258789\n",
+      "lr 0.100, discount 0.9, batch size 20 has score 103.52999839782714\n",
+      "lr 0.100, discount 1.0, batch size 1 has score 17.0\n",
+      "lr 0.100, discount 1.0, batch size 5 has score 9.480000305175782\n",
+      "lr 0.100, discount 1.0, batch size 10 has score 39.480001258850095\n",
+      "lr 0.100, discount 1.0, batch size 20 has score 30.020000457763672\n"
      ]
     }
    ],
@@ -178,27 +178,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'lr': 0.001, 'discount': 1.0, 'batch_size': 1}"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lr': 0.001, 'discount': 1.0, 'batch_size': 1}\n"
+     ]
     }
    ],
    "source": [
-    "print()"
+    "print(best_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"best_hyperparams.json\", 'w') as f:\n",
+    "    json.dump(best_params, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +224,7 @@
        "Text(0.5, 1.0, 'Avg reward')"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
